master: fix and refactors (score is broken)
